<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/news_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/content"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignLeft="@id/news_content"
        android:layout_alignStart="@id/news_content"
        android:layout_below="@+id/news_content"
        android:textSize="20sp"
        android:hint="@string/content_hint"/>

    <Button
        android:id="@+id/add"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/insert"
        android:layout_alignRight="@id/content"
        android:layout_alignEnd="@id/content"
        android:layout_below="@id/content"
        android:layout_marginTop="20dp"/>


</RelativeLayout>
