<?xml version="1.0" encoding="utf-8"?>
<!--新闻回帖项的布局-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/app_item_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/item3_apkiv"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_gravity="top"
            android:background="@drawable/norecord"
            android:layout_marginLeft="10dip" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/item3_floor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor"
                android:textColor="@color/black"
                android:textSize="14dip" />

            <TextView
                android:id="@+id/item3_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/replay_content"
                android:textSize="16dip" />
        </LinearLayout>
        <Button
            android:id="@+id/item3_dlbtn"
            android:layout_width="60dip"
            android:layout_height="30dip"
            android:background="@drawable/right2"
            android:layout_marginRight="10dip"
            android:text="@string/download"
            android:visibility="gone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/item3_time"
        android:layout_width="fill_parent"
        android:layout_height="30dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:gravity="center_vertical"
        android:text="@string/replay_time"
        android:textSize="12dip"/>

</LinearLayout>
